Upadate face_detect_multi.py

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 # Replace sk-xxxxxx with your actual OpenAI API key
-OPENAI_API_KEY=sk-xxxxxx
+OPENAI_API_KEY="your_openai_api_key_here"
 
 # Comma-separated list of allowed origins for CORS
-# Example: CORS_ALLOWED_ORIGINS=http://localhost:5174,http://localhost:3000,https://your-frontend-domain.com
-CORS_ALLOWED_ORIGINS=http://localhost:5174
+# Example: CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,https://your-frontend-domain.com
+CORS_ALLOWED_ORIGINS=http://localhost:5173
